# LUMIS

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  start-all.ps1  start-all.sh
backend/: .env.example  Dockerfile  render.yaml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: audit.py  chat.py  population.py  reports.py
backend/app/services/: agent_chat.py  audit_orchestrator.py  bias_engine.py  llm_client.py  llm_decision_adapter.py  model_connector.py  population_generator.py  report_generator.py
backend/demo/: mock_biased_model.py
crisis/backend/: requirements.txt  run.py
crisis/backend/app/: __init__.py
crisis/backend/app/api/: crisis.py  events.py  venue.py
crisis/backend/app/services/: crisis_hub.py
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/crisis/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/[id]/: page.tsx
frontend/app/dashboard/new/: page.tsx
frontend/app/laws/: page.tsx
frontend/app/monitor/: page.tsx
frontend/components/: AgentChat.tsx  AgentSimulationGrid.tsx  AuditForceGraph.tsx  ComplianceCards.tsx  FairnessRadar.tsx  GroupComparison.tsx  IntersectionalHeatmap.tsx  MetricsTable.tsx  ProxyDetection.tsx  Recommendations.tsx  VenueMap.tsx
frontend/lib/: api.ts  crisis-api.ts  utils.ts
sdk/python/: README.md  example.py  pyproject.toml
sdk/python/lumis/: __init__.py  client.py  wrappers.py
